--- a/application.yml
+++ b/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    username: root
-    password: 123qwe
+    url: ${DATABASE_URL:jdbc:mysql://mysql-service:3306/msa_db}
+    username: ${DATABASE_USERNAME:root}
+    password: ${DATABASE_PASSWORD:root1234}
   jpa:
     hibernate:
       ddl-auto: update
