--- a/application-docker.yml
+++ b/application-docker.yml
@@ -54,7 +54,7 @@ management:
 otel:
   exporter:
     zipkin:
-      endpoint: http://zipkin:9411/api/v2/spans
+      endpoint: http://zipkin-service:9411/api/v2/spans
   resource:
     attributes:
       service.name: ${spring.application.name}
