--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -29,6 +29,13 @@ spring:
             filters:
               - StripPrefix=1
 
+          - id: payment-service
+            uri: lb://payment-service
+            predicates:
+              - Path=/api/payments/**
+            filters:
+              - StripPrefix=1
+
 management:
   tracing:
     propagation:
