--- a/application.yml
+++ b/application.yml
@@ -16,6 +16,6 @@ management:
     web:
       exposure:
         include: health, info, refresh
-  endpoint:
-    refresh:
-      enabled: true
+  # endpoint:
+  #   refresh:
+  #     enabled: true
